--- a/user/login.html
+++ b/user/login.html
@@ -1,71 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Double Slider Login / Register</title>
-    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="login.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Double Slider Login / Registration Form</title>
+  <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="container" id="container"></div>
+  <div class="container" id="container">
 
-        <div class="form-container register-container">
-            <form action="#">
-                <h1>Register hire.</h1>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <button>Register</button>
-                <span>or use your account</span>
-                <div class="social-container"></div>
-                    <a href="#" class="social"><i class="lni lni-google"></i></a>
-                    <a href="#" class="social"><i class="lni lni-facebook"></i></a>
-            </form>
+    <div class="form-container register-container">
+      <form action="#">
+        <h1>Register here.</h1>
+        <input type="text" placeholder="Username">
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Password">
+        <button>Register</button>
+        <span>or use your account</span>
+        <div class="social-container">
+          <a href="#" class="social"><i class="lni lni-facebook-fill"></i></a>
+          <a href="#" class="social"><i class="lni lni-google"></i></a>
         </div>
+      </form>
+    </div>
 
-        <div class="form-container login-container">
-            <form action="#">
-                <h1>Login hire.</h1>
-                <input type="text" placeholder="Username">
-                <input type="password" placeholder="Password">
-                    <div class="content">
-                        <div class="checkbox">
-                            <input type="checkbox" name="checkbox" id="checkbox">
-                            <label>Remember me</label>
-                        </div>
-                        <div class="pass-link">
-                            <a href="#">Forgot password?</a>
-                        </div>
-                    </div>
-                    <button>Login</button>
-                    <span>or use your account</span>
-                    <div class="social-container">
-                        <a href="#" class="social"><i class="lni lni-google"></i></a>
-                        <a href="#" class="social"><i class="lni lni-facebook"></i></a>
-                    </div>
-            </form>
+    <div class="form-container login-container">
+      <form action="#">
+        <h1>Login here.</h1>
+        <input type="text" placeholder="Username">
+        <input type="password" placeholder="Password">
+        <div class="content">
+          <div class="checkbox">
+            <input type="checkbox" name="checkbox" id="checkbox">
+            <label>Remember me</label>
+          </div>
+          <div class="pass-link">
+            <a href="#">Forgot password?</a>
+          </div>
         </div>
-
-        <div class="overlay-container">
-            <div class="overlay">
-                <div class="overlay-panel overlay left">
-                    <h1 class="title">Hello <br> friends</h1>
-                    <p>If You have an account, login here and have fun</p>
-                    <button class="gost" id="login">Login
-                        <i class="lni lni-arrow-left login"></i>
-                    </button>
-                </div>
-                <div class="overlay-panel overlay right">
-                    <h1 class="title">Welcome <br> friends</h1>
-                    <p>Enter your personal details and start journey with us</p>
-                    <button class="ghost" id="register">Register
-                        <i class="lni lni-arrow-right register"></i>
-                    </button>
-                </div>
-             </div>
+        <button>Login</button>
+        <span>or use your account</span>
+        <div class="social-container">
+          <a href="#" class="social"><i class="lni lni-facebook-fill"></i></a>
+          <a href="#" class="social"><i class="lni lni-google"></i></a>
         </div>
+      </form>
+    </div>
 
-        <script src="../js/login.js"></script>
+    <div class="overlay-container">
+      <div class="overlay">
+        <div class="overlay-panel overlay-left">
+          <h1 class="title">Hello <br> friends</h1>
+          <p>if Yout have an account, login here and have fun!</p>
+          <button class="ghost" id="login">Login
+            <i class="lni lni-arrow-left login"></i>
+          </button>
+        </div>
+        <div class="overlay-panel overlay-right">
+          <h1 class="title">Start your <br> journer now</h1>
+          <p>if you don't have an account yet, join us and start your journey.</p>
+          <button class="ghost" id="register">Register
+            <i class="lni lni-arrow-right register"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <script src="../js/login.js"></script>
+
 </body>
 </html>
