--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Gobiz</title>
+    <title>About Gobiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -26,11 +26,8 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end gap-6">
-                <a href="user/login.html" class="bg-green-300 px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-green-600 duration-500">
+                <a href="user/login.html" class="btn btn-login">
                     <p>Login</p>
-                </a>
-                <a href="user/register.html" class="bg-white px-4 py-2 rounded-lg border-2 border-blue-900 hover:bg-gray-300 duration-500">
-                    <p>Register</p>
                 </a>
             </div>
         </nav>
