menambahkan logo di setiap element

--- a/tips.html
+++ b/tips.html
@@ -16,22 +16,22 @@
     <main class="container mx-auto p-6">
         <div class="flex flex-wrap justify-center gap-6">
             <div class="bg-white text-gray-800 rounded-lg p-6 w-80 shadow-lg hover:shadow-2xl transform hover:scale-105 transition duration-300">
-                <img src="download_icon.png" alt="Download Aplikasi" class="mx-auto mb-4 w-16">
+                <img src="https://tse4.mm.bing.net/th?id=OIP.BYTAlytyPXSuHLA08GyvYgAAAA&pid=Api&P=0&h=180" alt="Download Aplikasi" class="mx-auto mb-4 w-16">
                 <h3 class="text-2xl font-semibold mb-2 text-center">1. Download Aplikasi</h3>
                 <p class="text-center">Ayo download aplikasi GoBiz di Play Store. Aplikasinya ringan dan mudah digunakan, pasti hemat kuota internet.</p>
             </div>
             <div class="bg-white text-gray-800 rounded-lg p-6 w-80 shadow-lg hover:shadow-2xl transform hover:scale-105 transition duration-300">
-                <img src="register_icon.png" alt="Daftar Akun" class="mx-auto mb-4 w-16">
+                <img src="https://static.vecteezy.com/system/resources/previews/022/360/050/original/add-user-icon-registration-illustration-sign-avatar-symbol-new-profile-logo-vector.jpg" alt="Daftar Akun" class="mx-auto mb-4 w-16">
                 <h3 class="text-2xl font-semibold mb-2 text-center">2. Daftar Akun</h3>
                 <p class="text-center">Cukup dengan memasukkan nomor handphone dan lengkapi data diri kamu.</p>
             </div>
             <div class="bg-white text-gray-800 rounded-lg p-6 w-80 shadow-lg hover:shadow-2xl transform hover:scale-105 transition duration-300">
-                <img src="topup_icon.png" alt="Isi Saldo" class="mx-auto mb-4 w-16">
+                <img src="https://static.dribbble.com/users/2882545/screenshots/12370157/g37988_2x.png" alt="Isi Saldo" class="mx-auto mb-4 w-16">
                 <h3 class="text-2xl font-semibold mb-2 text-center">3. Isi Saldo</h3>
                 <p class="text-center">Saldo GoBiz akan menjadi cara pembayaran saat kamu bertransaksi sebagai Mitra GoBiz.</p>
             </div>
             <div class="bg-white text-gray-800 rounded-lg p-6 w-80 shadow-lg hover:shadow-2xl transform hover:scale-105 transition duration-300">
-                <img src="transaction_icon.png" alt="Transaksi" class="mx-auto mb-4 w-16">
+                <img src="https://w7.pngwing.com/pngs/763/869/png-transparent-payment-business-finance-logo-organization-business-text-service-hand.png" alt="Transaksi" class="mx-auto mb-4 w-16">
                 <h3 class="text-2xl font-semibold mb-2 text-center">4. Transaksi</h3>
                 <p class="text-center">Langsung beli stok barang, pulsa atau produk digital lain, dan dapatkan keuntungannya.</p>
             </div>
