Refactor tips.html to add GoBiz logo to each element and improve footer layout

--- a/tips.html
+++ b/tips.html
@@ -9,6 +9,20 @@
 <body class="bg-gradient-to-r from-blue-500 via-purple-500 to-indigo-500 text-white">
 
     <header class="text-center py-10">
+        <nav class="grid grid-cols-4 flex items-center px-10 py-2">
+            <div class="w-16">
+                <a href="index.html">
+                    <img class="rounded-full" src="img/gobiz.png" alt="GoBiz Logo">
+                </a>
+            </div>
+            <ul class="flex col-span-2 justify-center gap-32 items-center">
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="contact.html">Contact</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="tips.html">BizTips</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
+            </ul>
+        </nav>
+
         <h1 class="text-4xl font-extrabold drop-shadow-lg">Cara Mudah Jadi Mitra GoBiz</h1>
         <p class="mt-4 text-lg">Nikmati kemudahan bertransaksi dan berbagai keuntungan lainnya.</p>
     </header>
@@ -33,7 +47,7 @@
             <div class="bg-white text-gray-800 rounded-lg p-6 w-80 shadow-lg hover:shadow-2xl transform hover:scale-105 transition duration-300">
                 <img src="https://w7.pngwing.com/pngs/763/869/png-transparent-payment-business-finance-logo-organization-business-text-service-hand.png" alt="Transaksi" class="mx-auto mb-4 w-16">
                 <h3 class="text-2xl font-semibold mb-2 text-center">4. Transaksi</h3>
-                <p class="text-center">Langsung beli stok barang, pulsa atau produk digital lain, dan dapatkan keuntungannya.</p>
+                <p class="text-center">Langsung beli makanan & minuman yang anda ingin kan, dan dapatkan keuntungannya.</p>
             </div>
         </div>
 
@@ -45,6 +59,14 @@
 
     <footer class="text-center py-6 mt-12 bg-indigo-800">
         <p class="text-sm">&copy; 2024 GoBiz. Semua hak dilindungi.</p>
+        <div style="margin-top: 5px;">
+            <p>Ikuti Kami:</p>
+            <div style="display: flex; justify-content: center; gap: 20px;">
+                <a href="https://www.instagram.com/abnxrmally" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 30px; height: 30px;">
+                </a>
+            </div>
+        </div> 
     </footer>
 
 </body>
