Refactor index.html to update BizTips link and improve footer layout

--- a/user/index.html
+++ b/user/index.html
@@ -25,7 +25,7 @@
             <ul class="flex justify-center gap-12 col-span-2">
                 <li><a href="../contact.html">Layanan</a></li>
                 <li><a href="../about.html">Tentang</a></li>
-                <li><a href="#">BizTips</a></li>
+                <li><a href="../tips.html">BizTips</a></li>
                 <li><a href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end">
@@ -102,15 +102,12 @@
             <p>© <span id="currentYear"></span> GoBizID, Abnormal Company</p>
             <p>Kontak Person: abnormal </p>
             <p>Alamat: Jl. Sariasih No. 54, Kota Bandung, Indonesia</p>
-            <p>Email: company.abnormal@gmail.com | Telepon: +62 8783 6608 003</p>
+            <p>Email: company.abnormal@gmail.com | Telepon: +62 8579 4558 313</p>
     
             <!-- Bagian Ikuti Kami dengan Flexbox -->
             <div style="margin-top: 20px;">
                 <p>Ikuti Kami:</p>
                 <div style="display: flex; justify-content: center; gap: 20px;">
-                    <a href="" target="_blank">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" style="width: 30px; height: 30px;">
-                    </a>
                     <a href="https://www.instagram.com/abnxrmally" target="_blank">
                         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="width: 30px; height: 30px;">
                     </a>
