update section styling and remove unnecessary padding

--- a/user/index.html
+++ b/user/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
@@ -19,14 +20,14 @@
     <header class="sticky top-0 bg-white">
         <nav class="px-12 grid grid-cols-4 py-4 items-center">
             <div class="flex gap-5 items-center">
-                <img src="img/gobiz.png" alt="Profile Picture" class="rounded-[50%] w-8 h-8">
+                <img src="../img/gobiz.png" alt="Profile Picture" class="rounded-[50%] w-8 h-8">
                 <p>GoBiz</p>
             </div>
             <ul class="flex justify-center gap-12 col-span-2">
-                <li><a href="../contact.html">Layanan</a></li>
-                <li><a href="../about.html">Tentang</a></li>
-                <li><a href="../tips.html">BizTips</a></li>
-                <li><a href="#">Komunitas</a></li>
+                <li><a class="font-['Roboto_Condensed'] font-semibold" href="../contact.html">Layanan</a></li>
+                <li><a class="font-['Roboto_Condensed'] font-semibold" href="../about.html">Tentang</a></li>
+                <li><a class="font-['Roboto_Condensed'] font-semibold" href="../tips.html">BizTips</a></li>
+                <li><a class="font-['Roboto_Condensed'] font-semibold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end">
                 <a href="../index.html" class="bg-red-500 py-2 px-4 rounded-3xl font-semibold text-white">
