--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <div><img class="w-[100%]" src="../img/Food.gif" alt=""></div>
     </section>
 
-    <section class="grid grid-cols-2 items-center bg-gradient-to-r from-gray-300 via-[#5c95cf] to-[#5c95cf] py-24">
+    <section class="grid grid-cols-2 items-center bg-gradient-to-r from-gray-300 via-[#5c95cf] to-[#5c95cf]">
         <div class="order-last">
             <p class="font-['DM_Serif_Display'] text-blue-900 font-medium text-7xl">Our Vision & Mission</p>
             <div class="font-['Roboto_Condensed'] text-xl pt-8">
