--- a/user/menu.html
+++ b/user/menu.html
@@ -43,6 +43,15 @@
                 </div>
 
                 <div class="mb-6 border-b pb-4">
+                    <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://img-global.cpcdn.com/recipes/5fffec94496f2968/680x482cq70/nasi-goreng-chicken-katsu-foto-resep-utama.jpg" alt="Nasi Goreng Katsu">
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-gray-800 font-semibold">Nasi Goreng Katsu</h4>
+                        <span class="text-gray-200">Rp. 12.000</span>
+                        <button class="bg-green-400 text-white py-1 px-3 rounded-full hover:bg-green-500" onclick="addToCart('Nasi Goreng Katsu', 12000)">Pilih</button>
+                    </div>
+                </div>
+
+                <div class="mb-6 border-b pb-4">
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://cdn.idntimes.com/content-images/community/2022/09/food-gf3e7c3340-1920-cb2d2d7b7c11513f0cfd6d1f2b6f61da-b5f4c6c02ca913a53726666d16e2c658_600x400.jpg" alt="Mie Rebus">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Mie Rebus</h4>
