--- a/user/menu.html
+++ b/user/menu.html
@@ -7,6 +7,8 @@
     <title>GoBiz</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<!-- Favicon -->
+<link rel="icon" href="../img/food-package.png" type="image/x-icon">
 
 <body class="bg-gradient-to-r from-yellow-400 via-pink-500 to-red-500 text-white">
 
@@ -89,6 +91,15 @@
                         <h4 class="text-gray-800 font-semibold">Extrajos + Susu</h4>
                         <span class="text-gray-200">Rp. 6.000</span>
                         <button class="bg-purple-400 text-white py-1 px-3 rounded-full hover:bg-purple-500" onclick="addToCart('Extrajos + Susu', 6000)">Pilih</button>
+                    </div>
+                </div>
+
+                <div class="mb-6 border-b pb-4">
+                    <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://i.pinimg.com/originals/5d/31/ef/5d31ef90cd6c389e07bc48a08e583122.jpg" alt="Es Teh Manis">
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-gray-800 font-semibold">Es Teh Manis</h4>
+                        <span class="text-gray-200">Rp. 4.000</span>
+                        <button class="bg-purple-400 text-white py-1 px-3 rounded-full hover:bg-purple-500" onclick="addToCart('Es Teh Manis', 4000)">Pilih</button>
                     </div>
                 </div>
             </div>
