menambahkan link pemesanan

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <!-- Favicon -->
   <!-- Favicon -->
   <link rel="icon" href="img/food-package.png" type="image/x-icon">
-  
+
 <body class="bg-gray-300">
     <header class="bg-white sticky top-0">
         <nav class="grid grid-cols-4 flex items-center px-10 py-2">
@@ -25,7 +25,7 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="contact.html">Contact</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="tips.html">BizTips</a></li>
-                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="user/index.html">Pemesanan</a></li>
             </ul>
             <div class="flex justify-end gap-6">
                 <a href="user/login.html" class="btn btn-login">
