--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="contact.html">Contact</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="tips.html">BizTips</a></li>
-                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="user/index.html">Pemesanan</a></li>
             </ul>
             <div class="flex justify-end gap-6">
                 <a href="user/login.html" class="btn btn-login">
