--- a/tips.html
+++ b/tips.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cara Mudah Jadi Mitra GoBiz</title>
+    <title>BizTips</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="icon" href="img/food-package.png" type="image/x-icon">
 </head>
 <body class="bg-gradient-to-r from-blue-500 via-purple-500 to-indigo-500 text-white">
 
@@ -19,7 +20,7 @@
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="about.html">About</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="contact.html">Contact</a></li>
                 <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="tips.html">BizTips</a></li>
-                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="#">Komunitas</a></li>
+                <li class="font-['Roboto_Condensed'] text-xl"><a class="font-bold" href="user/index.html">Pemesanan</a></li>
             </ul>
         </nav>
 
