--- a/user/menu_warjo.html
+++ b/user/menu_warjo.html
@@ -14,7 +14,7 @@
     <div class="bg-gradient-to-r from-green-500 via-green-600 to-green-700 text-white p-4 flex items-center">
         <!-- Ikon panah Back -->
         <span class="text-3xl mr-4 cursor-pointer" onclick="goBack()">&#8592;</span>
-        <h1 class="text-2xl font-bold">WARNA WARUNG PAK NANA</h1>
+        <h1 class="text-2xl font-bold">WARJO</h1>
     </div>
 
     <div class="flex justify-around p-6">
@@ -28,8 +28,8 @@
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://img.kurio.network/zz8Lq9l4GLJT9EZz6fu7y4jXh0s=/1200x1200/filters:quality(80)/https://kurio-img.kurioapps.com/21/08/31/13bae191-984d-4029-b3cf-83116c0322be.jpe" alt="Nasi Orak-Arik Bakso">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Nasi Orak-Arik Bakso</h4>
-                        <span class="text-gray-200">Rp. 14.000</span>
-                        <button class="bg-green-600 text-white py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Nasi Orak-Arik Bakso', 14000)">Pilih</button>
+                        <span class="text-black">Rp. 14.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Nasi Orak-Arik Bakso', 14000)">Pilih</button>
                     </div>
                 </div>
 
@@ -37,8 +37,8 @@
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://www.tagar.id/Asset/uploads2019/1619417180951-indomie.jpg" alt="Mie Goreng">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Mie Goreng</h4>
-                        <span class="text-gray-200">Rp. 8.000</span>
-                        <button class="bg-green-600 text-white py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Mie Goreng', 8000)">Pilih</button>
+                        <span class="text-black">Rp. 8.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Mie Goreng', 8000)">Pilih</button>
                     </div>
                 </div>
 
@@ -46,22 +46,22 @@
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://cdn.idntimes.com/content-images/community/2022/09/food-gf3e7c3340-1920-cb2d2d7b7c11513f0cfd6d1f2b6f61da-b5f4c6c02ca913a53726666d16e2c658_600x400.jpg" alt="Mie Rebus">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Mie Rebus</h4>
-                        <span class="text-gray-200">Rp. 8.000</span>
-                        <button class="bg-green-600 text-white py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Mie Rebus', 8000)">Pilih</button>
+                        <span class="text-black">Rp. 8.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Mie Rebus', 8000)">Pilih</button>
                     </div>
                 </div>
             </div>
 
             <!-- Bagian Menu Minuman -->
             <div class="bg-gradient-to-r from-green-400 to-green-600 rounded-lg p-6 shadow-md w-full">
-                <h3 class="text-lg font-semibold text-gray-800 mb-4">Silakan Pilih Menu Minuman</h3>
+                <h3 class="text-lg font-semibold text-black-800 mb-4">Silakan Pilih Menu Minuman</h3>
 
                 <div class="mb-6 border-b pb-4">
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://asset.kompas.com/crops/NC1wNIzHla0M_zqMutdpG_4J-LY=/0x66:1000x733/750x500/data/photo/2022/10/12/63462c0db11c7.jpg" alt="Dancow Coklat">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Dancow Coklat</h4>
-                        <span class="text-gray-200">Rp. 6.000</span>
-                        <button class="bg-green-600 text-white py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Dancow Coklat', 6000)">Pilih</button>
+                        <span class="text-black">Rp. 6.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Dancow Coklat', 6000)">Pilih</button>
                     </div>
                 </div>
 
@@ -69,8 +69,8 @@
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://id-test-11.slatic.net/p/6808a5b8d39e75eb8ec560fde2b54878.jpg" alt="Pop Ice">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Pop Ice</h4>
-                        <span class="text-gray-200">Rp. 5.000</span>
-                        <button class="bg-green-600 text-white py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Pop Ice', 6000)">Pilih</button>
+                        <span class="text-black">Rp. 5.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Pop Ice', 6000)">Pilih</button>
                     </div>
                 </div>
 
@@ -78,8 +78,8 @@
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://i.gojekapi.com/darkroom/gofood-indonesia/v2/images/uploads/258caadf-18fa-4024-b4fe-1a7b3af720b9_Go-Biz_20210606_151015.jpeg" alt="Extrajos + Susu">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Extrajos + Susu</h4>
-                        <span class="text-gray-200">Rp. 6.000</span>
-                        <button class="bg-green-600 text-white py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Extrajos + Susu', 6000)">Pilih</button>
+                        <span class="text-black">Rp. 6.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Extrajos + Susu', 6000)">Pilih</button>
                     </div>
                 </div>
             </div>
