--- a/user/menu_warjo.html
+++ b/user/menu_warjo.html
@@ -10,6 +10,9 @@
 
 <body class="bg-gradient-to-r from-green-400 via-green-500 to-green-600 text-white">
 
+<!-- Favicon -->
+<link rel="icon" href="../img/food-package.png" type="image/x-icon">
+
     <!-- Bagian Header dengan tombol Back -->
     <div class="bg-gradient-to-r from-green-500 via-green-600 to-green-700 text-white p-4 flex items-center">
         <!-- Ikon panah Back -->
