--- a/user/menu_warna.html
+++ b/user/menu_warna.html
@@ -10,6 +10,9 @@
 
 <body class="bg-gradient-to-r from-yellow-400 via-pink-500 to-red-500 text-white">
 
+<!-- Favicon -->
+<link rel="icon" href="../img/food-package.png" type="image/x-icon">
+
     <!-- Bagian Header dengan tombol Back -->
     <div class="bg-gradient-to-r from-purple-400 via-pink-500 to-red-400 text-white p-4 flex items-center">
         <!-- Ikon panah Back -->
