Add favicon and menu

--- a/user/login.html
+++ b/user/login.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="login.css">
 </head>
 <body>
+  <!-- Favicon -->
+<link rel="icon" href="../img/food-package.png" type="image/x-icon">
+
   <div class="container" id="container">
 
     <div class="form-container register-container">
