--- a/user/index.html
+++ b/user/index.html
@@ -72,11 +72,11 @@
                 <div class="bg-gray-200 rounded-2xl bg-[url('https://bisnismuda.id/assets/content/20240704114126000000warmindo.jpg')] bg-cover toko-card">
                     <div class="bg-gradient-to-b from-transparent to-[#121212] h-80 rounded-2xl p-3 grid grid-cols-1">
                         <div class="h-40"></div>
-                        <h1 class="text-white text-xl font-semibold toko-name">Nama Toko</h1>
+                        <h1 class="text-white text-xl font-semibold toko-name">Warjo</h1>
                         <p class="text-gray-200">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, minima!</p>
                         <div class="flex justify-between items-center">
                             <p class="text-gray-300 text-xs">Lokasi - Depan Ulbi</p>
-                            <a href="" class="border-2 border-blue-300 px-6 py-1 rounded-xl text-blue-300">
+                            <a href="menu_warjo.html" class="border-2 border-blue-300 px-6 py-1 rounded-xl text-blue-300">
                                 <p>Pesan</p>
                             </a>
                         </div>
