--- a/user/index.html
+++ b/user/index.html
@@ -20,14 +20,15 @@
     <header class="sticky top-0 bg-white">
         <nav class="px-12 grid grid-cols-4 py-4 items-center">
             <div class="flex gap-5 items-center">
-                <img src="../img/gobiz.png" alt="Profile Picture" class="rounded-[50%] w-8 h-8">
+                <a href="../index.html">
+                    <img src="../img/gobiz.png" alt="Profile Picture" class="rounded-[50%] w-8 h-8">
+                </a>
                 <p>GoBiz</p>
             </div>
             <ul class="flex justify-center gap-12 col-span-2">
                 <li><a class="font-['Roboto_Condensed'] font-semibold" href="../contact.html">Layanan</a></li>
                 <li><a class="font-['Roboto_Condensed'] font-semibold" href="../about.html">Tentang</a></li>
                 <li><a class="font-['Roboto_Condensed'] font-semibold" href="../tips.html">BizTips</a></li>
-                <li><a class="font-['Roboto_Condensed'] font-semibold" href="#">Komunitas</a></li>
             </ul>
             <div class="flex justify-end">
                 <a href="../index.html" class="bg-red-500 py-2 px-4 rounded-3xl font-semibold text-white">
