--- a/user/menu_warjo.html
+++ b/user/menu_warjo.html
@@ -96,6 +96,25 @@
                         <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Extrajos + Susu', 6000)">Pilih</button>
                     </div>
                 </div>
+
+                <div class="mb-6 border-b pb-4">
+                    <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://i.pinimg.com/originals/5d/31/ef/5d31ef90cd6c389e07bc48a08e583122.jpg" alt="Es Teh Manis">
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-gray-800 font-semibold">Es Teh Manis</h4>
+                        <span class="text-gray-200">Rp. 4.000</span>
+                        <button class="bg-purple-400 text-white py-1 px-3 rounded-full hover:bg-purple-500" onclick="addToCart('Es Teh Manis', 4000)">Pilih</button>
+                    </div>
+                </div>
+
+                <div class="mb-6 border-b pb-4">
+                    <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://filebroker-cdn.lazada.co.id/kf/S0756517c5d8f45968b08d5ecd69ffd9c2.jpg" alt="Es Nutrisari">
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-gray-800 font-semibold">Es Nutrisari</h4>
+                        <span class="text-gray-200">Rp. 5.000</span>
+                        <button class="bg-purple-400 text-white py-1 px-3 rounded-full hover:bg-purple-500" onclick="addToCart('Es Nutrisari', 5000)">Pilih</button>
+                    </div>
+                </div>
+
             </div>
         </div>
 
